Mon, Nov 5, 2007 Amos Anderson
1.  I improved the performance of the 3 body jastrow calculations. I used a wide variety
    of tricks, and for my test input file (which is mostly correlated sampling), the code
    runs at 40-50% faster. There's no difference in the energies.

    There was a *very* slight numerical difference in the results (8th
    decimal place) for the correlated sampling energies. The derivatives themselves
    differ in the 14th place. However, I think this difference is negligible.

Mon, Oct 29, 2007 Amos Anderson
1.  I changed the way Jastrows are read in. Old input files are still compatible.
    Now you do not have to include Jastrow functions that will not be used. I added
    a parameter link_NEE_Jastrows, which is analogous to link_Jastrow_parameters.
    Setting link_NEE_Jastrows = 2 will use the same jastrow for NEupEdn, NEupEup,
    and NEdnEdn, setting link_NEE_Jastrows = 1 will set NEdnEdn = NEupEup,
    and link_NEE_Jastrows = 0 will use separate functions for all 3.

Fri, Oct 26, 2007 Daniel R Fisher
1.  Fixed a bug in QMCElectronNucleusCusp.  The function that fits the
    exponential to the Gaussian orbital was having problems when the
    gradient of the original orbital near the nucleus did not match its
    overall shape.  For example, if an orbital was overall decreasing
    between the radius of correction and the nucleus but had a negative
    gradient at the nucleus, the fit orbital would not satisfy the cusp
    condition.  Orbitals like this are very rare and have very little
    density at the nucleus in question, so this problem was not very
    important.  I fixed the problem by requiring that the radius of
    correction always be placed in a region where the shape of the
    original orbital matches its gradient near the origin.   

Thu, Oct 25, 2007 Amos Anderson
1.  I realized that Array2D was not accounting for permutations when
    using dgesv to calculate determinants. This resulted in spurious nodes,